# Data_for_ML_Smolyanov

./: README.md  README2.md  README3.md  annotation_spec.md  config.yaml  demo.py  pyproject.toml  requirements.txt  run_pipeline.ipynb  skill.md  skill_1.md  skill_2.md  skill_3.md  skill_4.md
agents/: al_agent.py  annotation_agent.py  data_collection_agent.py  data_quality_agent.py
data/processed/: demo_output.csv  demo_output_old.csv
data/raw/: cian_20260315_135017.csv  cian_20260315_135352.csv  spb_real_estate.csv
notebooks/: al_experiment.ipynb  data_quality_analysis.ipynb  eda.ipynb
specs/: annotation_spec.md
